cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory("1.1 HelloWindow")
add_subdirectory("2.1 HelloTriangle")
add_subdirectory("2.2 HelloTriangleIndexed")
add_subdirectory("3.1 ShadersUniform")
add_subdirectory("3.2 ShadersInterpolation")
add_subdirectory("4.1 Textures")
add_subdirectory("4.2 TexturesCombined")
add_subdirectory("5.1 Transformations")