cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory("1.1 Colors")
add_subdirectory("2.1 BasicLightingDiffuse")
add_subdirectory("2.2 BasicLightingSpecular")
add_subdirectory("3.1 Materials")
add_subdirectory("4.1 LightMapsDiffuseMap")
add_subdirectory("4.2 LightMapsSpecularMap")