cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory("2.3 BasicLightingExcercise1")
add_subdirectory("2.4 BasicLightingExcercise2")
add_subdirectory("2.5 BasicLightingExcercise3")
add_subdirectory("3.2 MaterialsExcercise1")
add_subdirectory("3.3 MaterialsExcercise2")